add plot for exp5

--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -503,7 +503,9 @@ In experiment 3b, we separated the self-referential and other-referential tasks 
 \hypertarget{experiment-4a}{%
 \section{Experiment 4a}\label{experiment-4a}}
 
-In study 1-3 participants made explicit judgements about moral associations. In Experiment 4, we examined whether the effects of moral valence occur even when the moral valence information might not be relevent to the task. In this study participants made perceptual match judgements to associations between self-referential labels and shapes (cf.~Sui et al., 2012), but we presented labels of different moral valence levels in the shapes.
+In study 1-3 participants made explicit judgements about moral associations. In Experiment 4, we examined whether the interaction between moral valence and identity occur even when one of the variable was irrelevent to the task. In experiment 4a, participants learnt associations between shapes and self/other labels, then made perceptual match judgements only about the self or other conditions labels and shapes (cf.~Sui et al., 2012). However, we presented labels of different moral valence in the shapes, which means that the moral valence factor become task irrelevant. If the binding between moral good and self is intrinsic and automatic, then we will observe that facilitating effect of moral good for self conditions, but not for other conditions.
+
+In study 4b, we changed the role of valence and identity in task. In this experiment, participants learn the association between moral valence and the made perceptual match judgements to associations between different moral valence and shapes as in study 1-3. Different from experiment 1 \textasciitilde{} 3, we made put the labels of \enquote{self/other} in the shapes so that identity served as an task irrelevant variable. As in experiment 4a, we also hypothesized that the instrinc binding between morally good and self will enhance the performance of good self condition, even identity is irrelevant to the task.
 
 \hypertarget{methods-1}{%
 \subsection{Methods}\label{methods-1}}
@@ -550,8 +552,8 @@ Figure \ref{fig:ex4a-dprime-rt} shows \emph{d} prime and reaction times of exper
 
 We conducted 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measures ANOVA. The effect of identity (\(F(1, 58) = 121.04\), \(\mathit{MSE} = 0.48\), \(p < .001\), \(\hat{\eta}^2_G = .189\)), also the interaction between identity and valence, (\(F(2, 116) = 4.12\), \(\mathit{MSE} = 0.14\), \(p = .019\), \(\hat{\eta}^2_G = .004\)). But not the effect of valence was not found, \(F(2, 116) = 0.53\), \(\mathit{MSE} = 0.11\), \(p = .587\), \(\hat{\eta}^2_G = .000\). We further examined the effect of valence for both self and other. For the self-referential trials, there was a weak effect of valence \(F(2, 116) = 3.01\), \(\mathit{MSE} = 0.15\), \(p = .053\), \(\hat{\eta}^2_G = .008\). Post-hoc analysis showed that good self condition (2.55 \(\pm\) 0.111) is slightly higher than bad self condition (2.38 \(\pm\) 0.105) , \emph{t}(58) = 2.339, \emph{p} = .0583. But there was no differences between good-self and neutral self (2.45 \(\pm\) 0.101), \emph{t}(58) = 1.575, \emph{p} = .264, neither between neutral-self and bad-self, \emph{t}(58) = 0.966, \emph{p} = .601. As for the other-referential conditions, the result didn't show effect of valence \(F(2, 116) = 1.75\), \(\mathit{MSE} = 0.10\), \(p = .178\), \(\hat{\eta}^2_G = .003\).
 
-\hypertarget{reaction-times.}{%
-\subsubsection{Reaction times.}\label{reaction-times.}}
+\hypertarget{reaction-times}{%
+\subsubsection{Reaction times}\label{reaction-times}}
 
 We conducted 2 (Matchness: match v. mismatch) by 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA. There was a main effect of Matchness (\(F(1, 58) = 79.85\), \(\mathit{MSE} = 4,817.48\), \(p < .001\), \(\hat{\eta}^2_G = .123\)) and intercation between Matchness and Identity(\(F(1, 58) = 81.15\), \(\mathit{MSE} = 3,226.69\), \(p < .001\), \(\hat{\eta}^2_G = .087\))
 
@@ -561,8 +563,6 @@ For non-matched trials, there was no significant effect. Morality (\(F(1, 58) = 
 
 \hypertarget{experiment-4b}{%
 \section{Experiment 4b}\label{experiment-4b}}
-
-In study 4b we further investigated whether the effects of moral valence would modulate by the presence of self. In this study, participants made perceptual match judgements to associations between different moral valence and shapes as in study 1-3. However, as in study 4, we made the self-referential task as an implicit task, to examine the interaction between self-referential effect and modulation of positive moral valence.
 
 \hypertarget{method-5}{%
 \subsection{Method}\label{method-5}}
@@ -595,27 +595,37 @@ The data were analyzed as in experiment 4a.
 \hypertarget{results-7}{%
 \subsection{Results}\label{results-7}}
 
+\begin{figure}
+\centering
+\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/ex4b-dprime-rt-1.pdf}
+\caption{\label{fig:ex4b-dprime-rt}RT and \emph{d} prime of Experiment 4b.}
+\end{figure}
+
+Figure \ref{fig:ex4b-dprime-rt} shows \emph{d} prime and reaction times of experiment 4b.
+
 \hypertarget{d-prime-4}{%
 \subsubsection{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-4}}
 
 We conducted 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA. The results revealed no effect of valence (\(F(1.59, 69.94) = 2.34\), \(\mathit{MSE} = 0.48\), \(p = .115\), \(\hat{\eta}^2_G = .010\)), or identity, \(F(1, 44) = 0.00\), \(\mathit{MSE} = 0.08\), \(p = .994\), \(\hat{\eta}^2_G = .000\), or their interactions, \(F(1.96, 86.41) = 0.53\), \(\mathit{MSE} = 0.10\), \(p = .585\), \(\hat{\eta}^2_G = .001\).
 
-\hypertarget{reaction-times}{%
-\subsubsection{Reaction times}\label{reaction-times}}
+\hypertarget{reaction-times-1}{%
+\subsubsection{Reaction times}\label{reaction-times-1}}
 
 We conducted 2 (Matchness: match v. mismatch) by 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA:
 
 There was a main effect of Matchness (\(F(1, 44) = 210.69\), \(\mathit{MSE} = 1,969.60\), \(p < .001\), \(\hat{\eta}^2_G = .180\)), main effect of valence (\(F(1.95, 85.74) = 5.35\), \(\mathit{MSE} = 2,247.66\), \(p = .007\), \(\hat{\eta}^2_G = .012\)), intercation between Matchness and Valence(\(F(1.87, 82.5) = 18.58\), \(\mathit{MSE} = 1,291.12\), \(p < .001\), \(\hat{\eta}^2_G = .023\)), and three way interaction (\(F(1.95, 85.99) = 3.70\), \(\mathit{MSE} = 285.25\), \(p = .030\), \(\hat{\eta}^2_G = .001\)).
 
-We futher broke down the interaction by analyzing the data for self and other pairs separately. There was a significant effect of moral valence for self-stimuli, \(F(1.74, 76.48) = 13.69\), \(\mathit{MSE} = 1,732.08\), \(p < .001\), \(\hat{\eta}^2_G = .079\), BF10 = 11.16. Paired t tests showed that good-self association (680 ± 65.7) were faster than bad-self associations (720 ± 60.2), \emph{t}(44) = -4.22, \emph{p} \textless{} .001, Cohen's \emph{d} = -0.629 CI {[}-0.947 -0.306{]}, BF10 = 200, and neutral-self association (712 ± 54.9), \emph{t}(44) = -4.67, \emph{p} \textless{} 0.001, Cohen's \emph{d} = -0.696, 95\% CI {[}-1.019 -0.367{]}, BF10 = 745.3. The neutral-self and bad-self associations did not differ, \emph{t}(44) = -1.04, \emph{p} = .31, Cohen's \emph{d} = -0.155, 95\%CI {[}-0.448 0.14{]}, BF10 = 0.267. RTs in good-self condition were facilitated but without performance being impaired for bad-self associations (relative to the normal neutral self)(see Figure 5).
-For the stranger condition, the main effect of moral valence was also significant, \(F(1.87, 82.44) = 7.09\), \(\mathit{MSE} = 1,527.43\), \(p = .002\), \(\hat{\eta}^2_G = .043\), BF10 = 21. The RT for good-other association condition (688 ± 66.9) is faster than the bad-other association condition (718 ± 49.7), t(44) = -3.353, p = 0.0017, Cohen's d = -0.4999, 95\%CI {[}-0.8075 -0.1872{]}, BF10 = 18.84. The RT for good-other condition is slightly faster than neutral-other condition (704 ± 57.1), but the evidence is not strong, t (44) = -2.21, p = 0.0324, Cohen's d = -0.3294, 95\%CI {[}-6278 -0.0275{]}, BF10 = 1.454. While there is is no strong evidence about the differences between bad-other vs.~neutral-other conditions, t(44) = -1.8267, p = 0.0745, Cohen's d = -0.2723, 95\%CI {[}-0.5685 0.0268{]}, BF10 = 0.743.
+We futher broke down the interaction by analyzing the data for self and other pairs separately. There was a significant effect of moral valence for self-stimuli, \(F(1.74, 76.48) = 13.69\), \(\mathit{MSE} = 1,732.08\), \(p < .001\), \(\hat{\eta}^2_G = .079\), BF10 = 11.16. Paired \emph{t} tests showed that good-self association (680 ± 9.79) were faster than bad-self associations (721 ± 8.97), \emph{t}(44) = -4.22, \emph{p} \textless{} .001, Cohen's \emph{d} = -0.629 CI {[}-0.947 -0.306{]}, BF10 = 200, and neutral-self association (713 \(\pm\) 8.19), \emph{t}(44) = -4.67, \emph{p} \textless{} 0.001, Cohen's \emph{d} = -0.696, 95\% CI {[}-1.019 -0.367{]}, BF10 = 745.3. The neutral-self and bad-self associations did not differ, \emph{t}(44) = -1.04, \emph{p} = .31, Cohen's \emph{d} = -0.155, 95\%CI {[}-0.448 0.14{]}, BF10 = 0.267. RTs in good-self condition were facilitated but without performance being impaired for bad-self associations (relative to the normal neutral self)(see Figure 5).
+For other-association condition, the main effect of moral valence was also significant, \(F(1.87, 82.44) = 7.09\), \(\mathit{MSE} = 1,527.43\), \(p = .002\), \(\hat{\eta}^2_G = .043\), BF10 = 21. The RT for good-other association condition (688 ± 66.9) is faster than the bad-other association condition (718 ± 49.7), t(44) = -3.353, p = 0.0017, Cohen's d = -0.4999, 95\%CI {[}-0.8075 -0.1872{]}, BF10 = 18.84. The RT for good-other condition is slightly faster than neutral-other condition (704 ± 57.1), but the evidence is not strong, t (44) = -2.21, p = 0.0324, Cohen's d = -0.3294, 95\%CI {[}-6278 -0.0275{]}, BF10 = 1.454. While there is is no strong evidence about the differences between bad-other vs.~neutral-other conditions, t(44) = -1.8267, p = 0.0745, Cohen's d = -0.2723, 95\%CI {[}-0.5685 0.0268{]}, BF10 = 0.743.
+
+We also comparied the reaction times for self- and other- association in different valence condition. we found that Good-self condition is faster than good-other condition, \emph{t}(44) = -2.165, \emph{p} = 0.0358; neutral self is slower than neutral-other condition, \emph{t}(44) = 3.064, \emph{p} = 0.0037. Bad-self and bad-other did not show difference, \emph{t}(44) = 0.623, \emph{p} = 0.5363
 
 For non-matched trials, there was no significant effect. Idneity (\(F(1, 44) = 1.96\), \(\mathit{MSE} = 319.47\), \(p = .169\), \(\hat{\eta}^2_G = .001\)), interaction (\(F(1.88, 82.57) = 0.31\), \(\mathit{MSE} = 316.96\), \(p = .718\), \(\hat{\eta}^2_G = .000\)). But here are effect of Valence (\(F(1.69, 74.54) = 6.59\), \(\mathit{MSE} = 886.19\), \(p = .004\), \(\hat{\eta}^2_G = .010\))
 
 \hypertarget{discussion-4}{%
 \subsection{Discussion}\label{discussion-4}}
 
-In experiment 4, we manipulated the task so that the moral valence (experiment 4a) or the self-relatedness (experiment 4b) become irrelevant to the task. We found a robust effect of the task: when the self-relatedness is task related, the results showed a strong effect of self-relatedness; in contrast, when moral valence become task related the main effect of moral valence was strong. However, the task irrelevant stimuli in the shape exerted influence on the performance as well. The good self conditions (the shape associated the self and with a \enquote{good person} within the shape) performed better than bad self conditions. These results demonstrated that even when the moral valence and self-reference was separated by the task, participants can still couple the the self with the morally good, and facilitated the perceptual decision making.
+In experiment 4, we manipulated the task so that the moral valence (experiment 4a) or the self-relatedness (experiment 4b) become irrelevant to the task. We found robust effects of the tasks: when the self-relatedness is task related, the results showed a strong effect of self-relatedness; in contrast, when moral valence become task related the main effect of moral valence was strong. However, the task irrelevant stimuli in the shape also had influence on the performance. The good self conditions (the shape associated the self and with a \enquote{good person} within the shape) performed better than bad self conditions even when the self was the only task relevant stimuli. Also, good-self showed advantage over good-other when valence is the only task relevant variable while idenity was not. Together, these results suggest that moral valence and self-referential can still couple together and facilitated the perceptual decision making even one feature of them is implicit.
 
 \hypertarget{experiment-5-generalization-of-positive-effect}{%
 \section{Experiment 5: Generalization of positive effect}\label{experiment-5-generalization-of-positive-effect}}
@@ -647,6 +657,14 @@ Participants finish 4 session of experiment, and each include one experiment as 
 
 \hypertarget{results-8}{%
 \subsection{Results}\label{results-8}}
+
+\begin{figure}
+\centering
+\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/ex5-dprime-rt-1.pdf}
+\caption{\label{fig:ex5-dprime-rt}RT and \emph{d} prime of Experiment 4b.}
+\end{figure}
+
+Figure \ref{fig:ex4b-dprime-rt} shows \emph{d} prime and reaction times of experiment 5.
 
 \hypertarget{d-prime-5}{%
 \subsubsection{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-5}}
