--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -1433,7 +1433,7 @@ posthoc_4a_d_m2 <- emmeans(df4a_dprime_anova, "Identity", by = "Valence") # comp
 ```
 We conducted 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measures ANOVA. The effect of identity (`r df4a_dprime_anova_apa$full$Identity`), also the interaction between identity and valence, (`r df4a_dprime_anova_apa$full$Identity_Valence`). But not the effect of valence was not found, `r df4a_dprime_anova_apa$full$Valence`. We further examined the effect of valence for both self and other. For the self-referential trials,  there was a weak effect of valence `r df4a_dprime_s_anova_apa$full$Valence`. Post-hoc analysis showed that good self condition (2.55 $\pm$ 0.111) is slightly higher than bad self condition (2.38 $\pm$ 0.105) , *t*(58) = 2.339, *p* = .0583. But there was no differences between good-self and neutral self (2.45 $\pm$ 0.101), *t*(58) = 1.575, *p* = .264, neither between neutral-self and bad-self, *t*(58) = 0.966, *p* = .601. As for the other-referential conditions, the result didn't show effect of valence `r df4a_dprime_o_anova_apa$full$Valence`.
 
-### Reaction times.
+### Reaction times
 
 ```{r analyzing for RT_4a, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
 df4a_RT_anova <- afex::aov_ez('Subject','RT_m',df4a.v.rt_m, within = c('Matchness','Identity','Valence'))
@@ -1468,8 +1468,6 @@ df4a_RT_anova_nm <- df4a.v.rt_m %>%
   dplyr::filter(Matchness == "Mismatch") %>%
   afex::aov_ez('Subject','RT_m', ., within = c('Identity','Valence'))
 df4a_RT_anova_nm_apa <- df4a_RT_anova_nm %>% papaja::apa_print()
-
-
 ```
 We conducted 2 (Matchness: match v. mismatch) by 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA. There was a main effect of Matchness (`r df4a_RT_anova_apa$full$Matchness`) and intercation between Matchness and Identity(`r df4a_RT_anova_apa$full$Matchness_Identity`)
 
@@ -1650,7 +1648,7 @@ df4b_RT_anova_m <- afex::aov_ez('Subject','RT_m',df4b.v.rt_m1,     # using afex'
                                   within = c('Identity','Valence'))
 df4b_RT_anova_m_apa <- df4b_RT_anova_m %>% papaja::apa_print()
 
-posthoc_4b_rt <- emmeans::emmeans(df4b_RT_anova_m, c('Identity',"Valence")) # compare each valence for both self and other condition
+posthoc_4b_rt <- emmeans::emmeans(df4b_RT_anova_m, 'Identity', by = "Valence") # compare each valence for both self and other condition
 # pairs(posthoc_4b_rt)
 
 # Mismatch trials
@@ -1697,13 +1695,15 @@ df4b_RT_anova_m_o_apa <- df4b_RT_anova_m_o %>% papaja::apa_print()
 posthoc_4b_rt_o <- emmeans::emmeans(df4b_RT_anova_m_o, c("Valence")) # compare each valence for both self and other condition
 # pairs(posthoc_4b_rt_o)
 ```
-We futher broke down the interaction by analyzing the data for self and other pairs separately. There was a significant effect of moral valence for self-stimuli, `r df4b_RT_anova_m_s_apa$full$Valence`, BF10 = 11.16. Paired t tests showed that good-self association (680 ± 65.7) were faster than bad-self associations (720  ± 60.2), *t*(44) = -4.22, *p* < .001, Cohen’s *d* = -0.629 CI [-0.947 -0.306], BF10 = 200, and  neutral-self association (712 ± 54.9), *t*(44) = -4.67, *p* < 0.001, Cohen’s *d* = -0.696, 95% CI [-1.019 -0.367], BF10 = 745.3. The neutral-self and bad-self associations did not differ, *t*(44) = -1.04, *p* = .31, Cohen’s *d* = -0.155, 95%CI [-0.448 0.14], BF10 = 0.267. RTs in good-self condition were facilitated but without performance being impaired for bad-self associations (relative to the normal neutral self)(see Figure 5). 
-For the stranger condition, the main effect of moral valence was  also significant, `r df4b_RT_anova_m_o_apa$full$Valence`, BF10 = 21. The RT for good-other association condition (688 ± 66.9) is faster than the bad-other association condition (718 ± 49.7), t(44) = -3.353, p = 0.0017, Cohen’s d = -0.4999, 95%CI [-0.8075 -0.1872], BF10 = 18.84. The RT for good-other condition is slightly faster than neutral-other condition (704 ± 57.1), but the evidence is not strong, t (44) = -2.21, p = 0.0324, Cohen’s d = -0.3294, 95%CI [-6278 -0.0275], BF10 = 1.454. While there is is no strong evidence about the differences between bad-other vs. neutral-other conditions, t(44) = -1.8267, p = 0.0745, Cohen’s d = -0.2723, 95%CI [-0.5685 0.0268], BF10 = 0.743.
+We futher broke down the interaction by analyzing the data for self and other pairs separately. There was a significant effect of moral valence for self-stimuli, `r df4b_RT_anova_m_s_apa$full$Valence`, BF10 = 11.16. Paired *t* tests showed that good-self association (680 ± 9.79) were faster than bad-self associations (721  ± 8.97), *t*(44) = -4.22, *p* < .001, Cohen’s *d* = -0.629 CI [-0.947 -0.306], BF10 = 200, and  neutral-self association (713 $\pm$ 8.19), *t*(44) = -4.67, *p* < 0.001, Cohen’s *d* = -0.696, 95% CI [-1.019 -0.367], BF10 = 745.3. The neutral-self and bad-self associations did not differ, *t*(44) = -1.04, *p* = .31, Cohen’s *d* = -0.155, 95%CI [-0.448 0.14], BF10 = 0.267. RTs in good-self condition were facilitated but without performance being impaired for bad-self associations (relative to the normal neutral self)(see Figure 5). 
+For other-association condition, the main effect of moral valence was  also significant, `r df4b_RT_anova_m_o_apa$full$Valence`, BF10 = 21. The RT for good-other association condition (688 ± 66.9) is faster than the bad-other association condition (718 ± 49.7), t(44) = -3.353, p = 0.0017, Cohen’s d = -0.4999, 95%CI [-0.8075 -0.1872], BF10 = 18.84. The RT for good-other condition is slightly faster than neutral-other condition (704 ± 57.1), but the evidence is not strong, t (44) = -2.21, p = 0.0324, Cohen’s d = -0.3294, 95%CI [-6278 -0.0275], BF10 = 1.454. While there is is no strong evidence about the differences between bad-other vs. neutral-other conditions, t(44) = -1.8267, p = 0.0745, Cohen’s d = -0.2723, 95%CI [-0.5685 0.0268], BF10 = 0.743.
+
+We also comparied the reaction times for self- and other- association in different valence condition. we found that Good-self condition is faster than good-other condition, *t*(44) = -2.165, *p* = 0.0358; neutral self is slower than neutral-other condition, *t*(44) = 3.064, *p* = 0.0037. Bad-self and bad-other did not show difference, *t*(44) = 0.623, *p* = 0.5363
 
 For non-matched trials, there was no significant effect. Idneity (`r df4b_RT_anova_nm_apa$full$Identity`), interaction (`r df4b_RT_anova_nm_apa$full$Identity_Valence`). But here are effect of Valence (`r df4b_RT_anova_nm_apa$full$Valence`)
 
 ## Discussion
-In experiment 4, we manipulated the task so that the moral valence (experiment 4a) or the self-relatedness (experiment 4b) become irrelevant to the task. We found a robust effect of the task: when the self-relatedness is task related, the results showed a strong effect of self-relatedness; in contrast, when moral valence become task related the main effect of moral valence was strong. However, the task irrelevant stimuli in the shape exerted influence on the performance as well. The good self conditions (the shape associated the self and with a “good person” within the shape) performed better than bad self conditions. These results demonstrated that even when the moral valence and self-reference was separated by the task, participants can still couple the the self with the morally good, and facilitated the perceptual decision making.
+In experiment 4, we manipulated the task so that the moral valence (experiment 4a) or the self-relatedness (experiment 4b) become irrelevant to the task. We found robust effects of the tasks: when the self-relatedness is task related, the results showed a strong effect of self-relatedness; in contrast, when moral valence become task related the main effect of moral valence was strong. However, the task irrelevant stimuli in the shape also had influence on the performance. The good self conditions (the shape associated the self and with a “good person” within the shape) performed better than bad self conditions even when the self was the only task relevant stimuli. Also, good-self showed advantage over good-other when valence is the only task relevant variable while idenity was not. Together, these results suggest that moral valence and self-referential can still couple together and facilitated the perceptual decision making even one feature of them is implicit.
 
 # Experiment 5: Generalization of positive effect
 So far, we have considered the modulation effect of morality and found that the positive moral valence could enhance the perception. However, we still not sure whether this effect was moral specific or reflecting a more general mechanism of effect of positive valence. To test the specificity of morality, we conducted experiment 5, in which three more categories of stimuli were used (people of different attractiveness, scene of diffenent attractivness, and emotional words with different valence). In this study, participants finished 4 session of association task, each with different categories of stimuli.
@@ -1809,8 +1809,8 @@ A 4 × 3 × 2 within-subject design was used. The first independent variable was
 Participants finish 4 session of experiment, and each include one experiment as in experiment 1. And the order of each category was randomnized for each participants. Each session started with a practice, and proceed to formal experiment when reached over 60% accuracy. Each session included 6 blocks of trial, each with 120 trials. 
 
 ## Results
-### *d* prime
-```{r analyzing for d prime_e5, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
+
+```{r 'ex5-dprime-rt', fig.cap="RT and *d* prime of Experiment 4b.", fig.height=6, fig.width=15, warning=FALSE}
 # calculating the dprime 
 df5.v.dprime_l <- df5.v %>%
   dplyr::mutate(sdt = mosaic::derivedFactor("hit" = (ACC ==1 & Matchness == "Match"), # code as hit
@@ -1830,15 +1830,65 @@ df5.v.dprime_l <- df5.v %>%
   dplyr::select(Site, Subject, Age, Sex, taskType,Valence, dprime) %>%   # select relevant columns
   dplyr::mutate(Valence = factor(Valence, levels = c("Good","Neutral","Bad")),
                 taskType = factor(taskType, levels = c('Morality', 'Emotion',"Person", "Scene")))
+# anova for RT with 2*2 design
+df5.v.rt_m <- df5.v %>%
+  dplyr::filter(ACC == 1) %>%
+  dplyr::group_by(Site,Subject,Matchness,taskType,Valence) %>%
+  dplyr::summarise(RT_m = mean(RT),
+                   Ntrial = length(RT)) %>%
+  dplyr::ungroup() %>%
+  dplyr::mutate(Valence = factor(Valence, levels = c("Good","Neutral","Bad")),
+                taskType = factor(taskType, levels = c('Morality', 'Emotion',"Person", "Scene")))
 
+P.dprime <- ggplot(df5.v.dprime_l,aes(x = taskType, y = dprime, fill = Valence)) +
+                geom_flat_violin(aes(fill = Valence),position = position_nudge(x = 0.1, y = 0),
+                                 adjust = 1.5, trim = FALSE, alpha = 0.5,color = NA) +
+                geom_dotplot(aes(x = taskType, y = dprime, color = Valence), 
+                             binaxis='y', binwidth = 0.01, stackdir='center', dotsize= 5.5,
+                             position = position_dodge(0.2)) +
+                geom_boxplot(aes(x = taskType,  y = dprime, fill = Valence), 
+                             outlier.shape = NA, alpha = 0.5, width = 0.1,  color = 'black',
+                             position = position_dodge(0.2)) + 
+                scale_color_brewer(palette = "Dark2") +
+                scale_fill_brewer(palette = "Dark2") +
+                ylab(expression(paste(italic("d"), " prime"))) +
+               # scale_x_discrete(breaks = c(1,2),labels = c("Good","Bad")) +
+                scale_y_continuous(expand = c(0, 0), limits = c(-1,5)) +
+                apatheme
+          
+          
+P.rt <- ggplot(df5.v.rt_m,aes(x = taskType , y = RT_m, fill = Valence))+
+      geom_flat_violin(aes(fill = Valence),position = position_nudge(x = 0.1, y = 0),
+                       adjust = 1.5, trim = FALSE, alpha = 0.5,color = NA) +
+      #geom_point(aes(x = as.numeric(Morality)-0.15,y = RT, color = Identity), 
+      #           position = position_jitter(width = 0.02),size = 1, shape = 20)+
+      geom_dotplot(aes(x = taskType,y = RT_m, color = Valence), 
+                   binaxis='y', binwidth = 0.8, stackdir='center', dotsize= 8,
+                   position = position_dodge(0.2)) + 
+      geom_boxplot(aes(x = taskType,  y = RT_m,fill = Valence),outlier.shape = NA,
+                   alpha = 0.5, width = 0.1,  color = "black",
+                   position = position_dodge(0.2))+ 
+      scale_color_brewer(palette = "Dark2")+
+      scale_fill_brewer(palette = "Dark2")+
+      ylab("Reaction Times")+
+      #scale_x_discrete(breaks = c(1,2),labels = c("Good","Bad")) +
+      scale_y_continuous(expand = c(0, 0),limits = c(300,1000))+
+      apatheme
+multiplot(P.rt,P.dprime,cols = 2)
 
+```
+
+Figure \@ref(fig:ex4b-dprime-rt) shows *d* prime and reaction times of experiment 5.
+
+### *d* prime
+```{r analyzing for d prime_e5, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
 # anova for d prime with 2*2 design
 df5_dprime_anova <- afex::aov_ez('Subject','dprime',df5.v.dprime_l,  # using afex's function 
                                   within = c('taskType','Valence'))
 df5_dprime_anova_apa <- df5_dprime_anova %>% papaja::apa_print()
 #df4b_dprime_anova <- apa_print(df4b_dprime_anova)
 ```
-We conducted 4 (task type: morality, emotion, person, scene) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA. The results revealed no effect of task type (`r df5_dprime_anova_apa$full$taskType`), but revealed effect of valence, `r df5_dprime_anova_apa$full$Valence`, and their interactions, `r df5_dprime_anova_apa$full$taskType_Valence`. 
+
 
 ```{r analyzing for d prime_e5_tasks, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
 # calculating the dprime 
@@ -1874,7 +1924,9 @@ pairs(post_hoc_5_d_s)
 
 ```
 
-To understand the interaction, we separated four different tasks. For the morality task, the valence effect `r df5_dprime_M_anova_apa$full$Valence`.
+We conducted 4 (task type: morality, emotion, person, scene) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA. The results revealed no effect of task type (`r df5_dprime_anova_apa$full$taskType`), but revealed effect of valence, `r df5_dprime_anova_apa$full$Valence`, and their interactions, `r df5_dprime_anova_apa$full$taskType_Valence`. 
+
+We then conducted ANOVA separately for four different tasks. For the morality task, the valence effect `r df5_dprime_M_anova_apa$full$Valence`.
 
 For emotion conditions, we found that main effect of valence `r df5_dprime_E_anova_apa$full$Valence`. Post-hoc comparison showed that good (2.13, s.e. = 0.161) was not different from neutral condition (2.10, se = 0.125), *t*(37) = 0.163, *p* = 0.9854, but both are higher than  than bad condition (1.79, se = 0.148) (neutral > bad, *t*(37) = 3.588, *p* = 0.0027; good > bad, *t*(37) = 2.62, *p* = 0.0332).
 
@@ -1887,13 +1939,6 @@ For scene appearance, the main effect of valence is significnat `r df5_dprime_S_
 
 As in previous experiment, we focused our analysis on the matched trials. We conducted 4 (task type: morality, emotion, beauty of person, beauty of scene) by 3 (Valence: good, neutral, bad) repeated measure ANOVA for matched trials only.
 ```{r 5_RT, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
-# anova for RT with 2*2 design
-df5.v.rt_m <- df5.v %>%
-  dplyr::filter(ACC == 1) %>%
-  dplyr::group_by(Site,Subject,Matchness,taskType,Valence) %>%
-  dplyr::summarise(RT_m = mean(RT),
-                   Ntrial = length(RT)) %>%
-  dplyr::ungroup()
 
 df5_RT_anova <- afex::aov_ez('Subject','RT_m',df5.v.rt_m, within = c("Matchness",'taskType','Valence')) # using afex's function
 
